--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
             curl -sS http://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - ;
             echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list ;
             sudo apt-get update && sudo apt-get install yarn
+            sudo rm /usr/local/bin/yarn # remove docker yarn
       - run:
           name: Check yarn version
           command: yarn version
